--- a/inicio/templates/mapa.html
+++ b/inicio/templates/mapa.html
@@ -6,12 +6,8 @@
 <div class="content-box">
     <img src="{% static 'map.png' %}" alt="Mapa Interactivo" width="80">
     
-<<<<<<< HEAD
     <!-- Título principal de la página -->
     <h1 class="uni-title" style="font-size: 2rem; margin-bottom: 30px; text-align: center;">Mapa Interactivo</h1>
-=======
-    <h1>Mapa Interactivo</h1>
->>>>>>> 924202299f8d4469f4948c6a279faf2df5df5ccb
     
     <p>En este mapa interactivo encontrarás diversas ubicaciones de interés.</p>
     <p>Puedes hacer clic en los marcadores para obtener más información sobre cada lugar.</p>
@@ -28,12 +24,12 @@
     #map {
         height: 600px;
         width: 870px;
-        background-color: #beecf7e6 !important; /* evita mezcla con fondo del contenedor */
+        background-color: #beecf7e6 !important; 
         z-index: 1;
     }
 
     .leaflet-container {
-        background: none !important; /* elimina el patrón de fondo por defecto */
+        background: none !important; 
     }
     
 </style>
