--- a/inicio/templates/inicio.html
+++ b/inicio/templates/inicio.html
@@ -25,8 +25,8 @@
         </p>
         <p>
             Comienza a usar la plataforma explorando la sección de
-            <a href="{% url 'tutores' %}" style="color: var(--color-uni-red); font-weight: bold;">Tutores</a>, <br>
-            o revisa las ubicaciones clave de nuestra universidad en nuestro <a href="{% url 'mapa' %}"style="color: #FF9933; font-weight: bold;">Mapa Interactivo</a>.
+            <a href="{% url 'inicio:tutores' %}" style="color: var(--color-uni-red); font-weight: bold;">Tutores</a>, <br>
+            o revisa las ubicaciones clave de nuestra universidad en nuestro <a href="{% url 'inicio:mapa' %}"style="color: #FF9933; font-weight: bold;">Mapa Interactivo</a>.
         </p>
     </div>
 </div>
