--- a/inicio/static/styles/main.css
+++ b/inicio/static/styles/main.css
@@ -65,6 +65,7 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
 }
 
+
 .logo {
     color: #2563eb;    
     font-size: 2rem;    
@@ -117,7 +118,7 @@ body {
 /* ===== APLICAMOS LA IMAGEN DE FONDO AQUÍ ===== */
 .main {
     background-image: linear-gradient(rgba(248, 250, 252, 0.299), rgba(248, 250, 252, 0)), 
-                      url('/static/inicio/pie.png');
+    url('/static/inicio/fondo.png');
     
     background-size: 100% auto; /* FIX: Asegura que el ancho sea 100% y la altura se adapte completamente */
     background-position: center top; 
