Icono chat y arreglo registro

--- a/inicio/templates/base.html
+++ b/inicio/templates/base.html
@@ -74,7 +74,7 @@
 
                 <span class="separator">-</span>
 
-                <a href="{% url 'inicio:home' %}" class="nav-item">Chat</a>
+                <a href="{% url 'inicio:home' %}" class="nav-item">📩 Chat</a>
                <span class="separator">-</span>
 
                 <a href="{% url 'inicio:perfil' %}" class="nav-item">👤 Perfil</a>
