--- a/inicio/templates/register.html
+++ b/inicio/templates/register.html
@@ -45,7 +45,7 @@
                         {% if field.name == 'username' %}👤 Nombre de Usuario
                         {% elif field.name == 'email' %}📧 Correo Electrónico
                         {% elif field.name == 'first_name' %}✨ Nombres
-                        {% elif field.name == 'last_name' %}surname Apellidos
+                        {% elif field.name == 'last_name' %}📝 Apellidos
                         {% elif field.name == 'rol_universitario' %}🆔 Rol Universitario
                         {% elif field.name == 'rol' %}🎓 Rol en el Proyecto
                         {% elif field.name == 'nombre_social' %}💖 Nombre Social
